kubernetes/api-gateway-proxy/api-gateway-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-proxy
      id: "0"
  template:
    metadata:
      labels:
        app: api-gateway-proxy
        id: "0"
    spec:
      containers:
        - name: api-gateway-proxy
          image: api-gateway-proxy
          ports:
            - containerPort: 1449
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-proxy
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: http2
      port: 1449
      targetPort: 1449
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: api-gateway-proxy
  externalIPs:
    - 192.168.1.146
